--- a/style.css
+++ b/style.css
@@ -1,4 +1,102 @@
 body {
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow: hidden;
+}
+
+.wrapper {
+    width: 1170px;
+    margin: auto;
+}
+
+/* Header */
+
+.header {
+    background-color: #1f2937;
+}
+
+.header-contents {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-logo, .header-nav {
+    display: flex;
+}
+
+.header-logo {
+    font-size: 24px;
+    color: #F9FAF8;
+}
+
+.header-nav {
+    color: #e5e7eb;
+    font-size: 18px;
+    gap: 20px;
+}
+
+.header-nav a {
+    color: white;
+    text-decoration: none;
+}
+
+/* Hero */
+
+.hero {
+    background-color: #1f2937;
+    height: 400px;
+}
+
+.hero-contents {
+    display: flex;
+    height: 100%
+}
+
+.hero-left {
+    display: flex;
+    flex-wrap: wrap;
+    width: 50%;
+    margin: auto;
+}
+
+.hero-right {
+    display: flex;
+    width: 50%;
+}
+
+.hero-h1 {
+    font-size: 48px;
+    font-weight: bold;
+    color: #f9faf8;
+    margin: 0px;
+}
+
+.hero-p {
+    font-size: 18px;
+    color: #e5e7eb;
+    margin-top: 10px;
+}
+
+.sign-up-button {
+    border-radius: 5px;
+    border: none;
+    padding: 8px 15px;
+    color: white;
+    background-color: #3882f6;
+    font-weight: 800;
+}
+
+.hero-placeholder {
+    background-color: #c9cace70;
+    width: 100%;
+    height: 50%;
+    margin: auto;
+}
+
+.placeholder-text {
+    color: white;
 }
