--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ body {
     width: 100%;
     margin: 0px;
     padding: 0px;
-    overflow: hidden;
+    overflow-x: hidden;
+    scroll-behavior: auto;
 }
 
 .wrapper {
@@ -22,6 +23,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .header-logo, .header-nav {
@@ -49,22 +51,20 @@ body {
 .hero {
     background-color: #1f2937;
     height: 400px;
+    display: flex;
 }
 
 .hero-contents {
     display: flex;
-    height: 100%
+    align-items: center;
+    justify-content: center;
+    gap: 4em;
+    height: 100%;
 }
 
 .hero-left {
     display: flex;
-    flex-wrap: wrap;
-    width: 50%;
-    margin: auto;
-}
-
-.hero-right {
-    display: flex;
+    flex-direction: column;
     width: 50%;
 }
 
@@ -82,6 +82,7 @@ body {
 }
 
 .sign-up-button {
+    width: 100px;
     border-radius: 5px;
     border: none;
     padding: 8px 15px;
@@ -90,13 +91,68 @@ body {
     font-weight: 800;
 }
 
+.hero-right {
+    width: 50%;
+    height: 200px;
+    display: flex;
+}
+
 .hero-placeholder {
     background-color: #c9cace70;
+    height: 100%;
     width: 100%;
-    height: 50%;
-    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .placeholder-text {
     color: white;
+}
+
+/* Information */
+
+.information {
+    background-color: white;
+    height: 350px;
+}
+
+.information-contents {
+    padding-top: 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.information-header {
+
+}
+
+.information-row {
+    margin-top: 1em;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 4em;
+}
+
+.information-box {
+    width: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.information-placeholder {
+    height: 150px;
+    width: 100%;
+    border: 3px solid #3882f6;
+    border-radius: 8px;
+}
+
+.information-text {
+    width: 100%;
+    text-align: center;
 }
