--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ body {
 
 .information {
     background-color: white;
-    height: 350px;
+    height: 450px;
 }
 
 .information-contents {
@@ -155,4 +155,29 @@ body {
 .information-text {
     width: 100%;
     text-align: center;
+}
+
+/* Quote */
+
+.quote-container {
+    height: 350px;
+    background-color: #e5e7eb;
+}
+
+.quote {
+    width: 40%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.quote em {
+    font-size: 36px;
+    font-weight: 300;
+}
+
+.quote strong {
+    text-align: end;
+    font-size: 18px;
 }
