--- a/style.css
+++ b/style.css
@@ -181,3 +181,41 @@ body {
     text-align: end;
     font-size: 18px;
 }
+
+.cta-container {
+    height: 300px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.cta {
+    background-color: #3882f6;
+    border-radius: 8px;
+    height: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.cta-text > h2, .cta-text > p {
+    color: white;
+    margin: 0px;
+}
+
+.cta-button > button {
+    border: 2px solid white;
+    border-radius: 5px;
+    background-color: #3882f6;
+    color: white;
+    padding: 7px 30px;
+    font-weight: 800;
+    font-size: 14px;
+    display: inline-block;
+    position: relative;
+    cursor: pointer;
+}
+
+.cta-button > button:hover {
+    background-color: #5e9bfd;
+}
