--- a/style.css
+++ b/style.css
@@ -162,14 +162,15 @@ body {
 .quote-container {
     height: 350px;
     background-color: #e5e7eb;
+    display: flex;
 }
 
 .quote {
-    width: 40%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    flex: 0 1 50%;
 }
 
 .quote em {
@@ -182,8 +183,10 @@ body {
     font-size: 18px;
 }
 
+/* CTA */
+
 .cta-container {
-    height: 300px;
+    height: 350px;
     width: 100%;
     display: flex;
     align-items: center;
@@ -218,4 +221,18 @@ body {
 
 .cta-button > button:hover {
     background-color: #5e9bfd;
+}
+
+/* Footer */
+
+footer {
+    background-color: #1f2937;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+footer p {
+    color: white;
 }
